--- a/views/display.ejs
+++ b/views/display.ejs
@@ -20,11 +20,20 @@
 	<div class="flex" >
         <div class="item" style="width:500px;">
             <h3 >商品列表</h3>
-			<div>
+			<div style = "height:300px">
 				<% datalist.forEach((data)=>{ %>
 					<div>
 					  <%=data.ID+1%>
 					  <button onclick = "showitem('<%=data.ID%>')" style = "border:None; background-color:#FFFFFF;cursor:pointer"><%= data.name %></button>
+					</div>
+				<%})%>
+				<button id = "refreshButton">更新商品列表</button>
+				<button id = "EndButton">結束競標</button>
+			</div>
+			<div style = "height:300px">
+				<% enddata.forEach((data)=>{ %>
+					<div>
+					  <%=data.ID%> <%= data.name %>
 					</div>
 				<%})%>
 			</div>
@@ -37,6 +46,7 @@
 			<h5 id="Deadline" style="color: red;">截標時間:</h5>
 			<h5 id="GoodDescription" style="color: red;">商品說明:</h5>
 		</div>
+
 	</div>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 	<script src="javascripts/display.js"></script>
