--- a/views/display.ejs
+++ b/views/display.ejs
@@ -28,7 +28,7 @@
 					</div>
 				<%})%>
 				<button id = "refreshButton">更新商品列表</button>
-				<button id = "EndButton">結束競標</button>
+				<input type="button" name="Submit" value="新增標物" class="btn" onclick="location.href='/upload.html'" />
 			</div>
 			<div style = "height:300px">
 				<% enddata.forEach((data)=>{ %>
@@ -46,6 +46,7 @@
 			<h5 id="Deadline" style="color: red;">截標時間:</h5>
 			<h5 id="GoodDescription" style="color: red;">商品說明:</h5>
 		</div>
+		<button id = "EndButton" style = "position:fixed;bottom: 50px;right: 50px;">結束競標</button>
 
 	</div>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
