--- a/views/display.ejs
+++ b/views/display.ejs
@@ -45,6 +45,10 @@
 			<h5 id="CurrentPrice" style="color: red;">目前標價:</h5>
 			<h5 id="Deadline" style="color: red;">截標時間:</h5>
 			<h5 id="GoodDescription" style="color: red;">商品說明:</h5>
+			<hr>
+			<h4>出價競標此物品</h4>
+			<input id="bidPrice" type="number" placeholder="出價金額 (TWD)">
+			<button onclick = "biditem()">執行</button>
 		</div>
 		<button id = "EndButton" style = "position:fixed;bottom: 50px;right: 50px;">結束競標</button>
 
