feat: add email

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -47,6 +47,7 @@
 			<h5 id="GoodDescription" style="color: red;">商品說明:</h5>
 			<hr>
 			<h4>出價競標此物品</h4>
+			<input id="bidEmail" type="email" placeholder="您的email">
 			<input id="bidPrice" type="number" placeholder="出價金額（TWD）">
 			<button onclick="bidItem()">執行</button>
 		</div>
