feat: add history

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -50,6 +50,9 @@
 			<input id="bidEmail" type="email" placeholder="您的email">
 			<input id="bidPrice" type="number" placeholder="出價金額（TWD）">
 			<button onclick="bidItem()">執行</button>
+			<hr>
+			<h4>歷史競標紀錄</h4>
+			<pre id="history"></pre>
 		</div>
 		<button id = "EndButton" style = "position:fixed;bottom: 50px;right: 50px;">結束競標</button>
 
